<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9"
    tools:context=".AjustesFragment">

    <ImageButton
        android:id="@+id/btnFlechaAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@null"
        app:srcCompat="@drawable/btn_flecha_atras" />

    <View
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_marginTop="55dp"
        android:background="#ECECEC" />

    <TextView
        android:id="@+id/tvAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_menu_ajustes"
        android:textColor="#000000"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="130dp"
        android:layout_height="101dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="90dp"
        android:background="#000000"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imagenPerfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/jorge" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvApodoUsuarioAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="100dp"
        android:text="@string/apodo_usuario_ajustes"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvNombreUsuarioAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="140dp"
        android:text="@string/nombre_usuario_ajustes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGestionarCuenta"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="#D9D9D9"
        android:text="@string/gestionar_cuenta_ajustes"
        android:textColor="#000000"
        android:textSize="25sp"
        app:cornerRadius="0dp"
        app:icon="@drawable/user"
        app:iconGravity="start"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:iconTint="#000000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCambiarIdioma"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="290dp"
        android:backgroundTint="#D9D9D9"
        android:text="@string/cambiar_idioma_ajustes"
        android:textColor="#000000"
        android:textSize="25sp"
        app:cornerRadius="0dp"
        app:icon="@drawable/language"
        app:iconGravity="start"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:iconTint="#000000"
        android:onClick="cambiarIdioma"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBorrarCuenta"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="360dp"
        android:backgroundTint="#D9D9D9"
        android:text="@string/borrar_cuenta_ajustes"
        android:textColor="#000000"
        android:textSize="25sp"
        app:cornerRadius="0dp"
        app:icon="@drawable/borrar_cuenta"
        app:iconGravity="start"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:iconTint="#000000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTerminosCondiciones"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="430dp"
        android:backgroundTint="#D9D9D9"
        android:text="@string/terminos_y_condiciones_ajustes"
        android:textColor="#000000"
        android:textSize="25sp"
        app:cornerRadius="0dp"
        app:icon="@drawable/libro"
        app:iconGravity="start"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:iconTint="#000000" />

</FrameLayout>
