<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListadoExperienciasFragment"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/titulo_desafio"
        android:textColor="#1FCE7D"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Recomendado imagenes de 300 x 200 -->

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        android:background="#000000"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo">

        <ImageView
            android:id="@+id/imagenPerfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:scaleType="centerCrop"
            android:src="@drawable/ilusiones" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvTituloInformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="35dp"
        android:text="@string/titulo_informacion_desafio"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="#F4F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloInformacion">

        <TextView
            android:id="@+id/tvInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:text="@string/info_desafio"
            android:textColor="#000000"
            android:textSize="25sp" />

    </ScrollView>

    <!-- Está en verde pero por algún motivo en la vista diseño sale en morado. Cosmico -->

    <Button
        android:id="@+id/btnEstadoDesafio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1FCE7D"
        android:text="@string/info_estado_desafio"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
